# mychatarchive

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
demo/: demo-transcript.md  record-demo.sh
docs/: PR-description.md  hermes-plugin-design.md  itir-native-transition.md
examples/mcp_configs/: cursor.json
hermes-plugin/plugins/memory/mychatarchive/: __init__.py
integrations/hermes/: cli.py
integrations/hermes/docs/: PR-description.md
scripts/: ingest_memory_proof.py
src/mychatarchive/: __init__.py  __main__.py  chunker.py  cli.py  config.py  db.py  embeddings.py  hybrid_search.py  ingest.py  ingest_bridge.py  itir.py  itir_projection.py  itir_residuals.py  live.py  retrieval_explain.py  summarizer.py
src/mychatarchive/backends/: __init__.py
src/mychatarchive/backends/embeddings/: __init__.py  local.py  openai.py
src/mychatarchive/backends/storage/: __init__.py  sqlite.py
src/mychatarchive/backends/transport/: __init__.py
src/mychatarchive/mcp/: server.py
src/mychatarchive/parsers/: __init__.py  anthropic.py  chatgpt.py  claude_code.py  cursor.py  grok.py
tests/: test_backends.py  test_cli.py  test_db.py  test_fts_v2.py  test_hybrid_search.py  test_ingest_bridge.py  test_ingest_streaming.py  test_itir.py  test_mcp_provenance_retrieval.py  test_mychatarchive_plugin.py  test_parsers.py
